2004-08-09   Christian Stimming <stimming@tuhh.de>

	* src/base/misc.h, list2.h: Introduce GWEN_LIST_FUNCTION_LIB_DEFS
	macros that accept a third argument to specify the
	__declspec(dllimport) function declarations where necessary. These
	are necessary for all libraries that use these macros in their
	public headers.

2004/08/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/inherit: added a macro which allows unlinking a type from a base type


2004-08-06   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Fix header links for gwenui directory.

	* src/crypt/ossl/cryptssl.c (GWEN_CryptKey_FromPasswordSSL): Fix
	wrong buffer size variable.


2004/08/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/plugindescription: added functions to retrieve the XML node of
  the plugin. This may contain more usefull information for the caller.
- separated the ncurses based UI stuff from the rest: There is now
  libgwenui.so which contains the UI functionality. Therefore gwen itself
  no longer needs to be linked against ncurses. This also makes gwen lean
  again ;-)
  -> SO_VERSION incremented, SO_AGE=0 (makes it effectively .so.16)
- install an XML file for the CSV plugin
- added TVL handling code to parser module
- crypt: added a function which allows creating key data from a password using
  the SSL method. However, this is only to be used for old, existing code and
  data. New code is required to use the other function 
  (GWEN_CryptKey_FromPassword()). This allows removing OpenSSL dependencies
  from other projects (like AqHBCI's OpenHBCI medium plugin)
- base/inherit: added a macro which allows unlinking a type from a base type


2004/08/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/waitcallback: fixed a severe bug
- os/gwentime: changed some arguments to const
- base/idlist: fixed a severe bug