@@ -1,5 +1,9 @@
 2004-08-09   Christian Stimming <stimming@tuhh.de>
 
+	* src/base/list2.h, list.h: Modify the ForEach function
+	declaration so that is takes an additional void* argument that can
+	be used to pass data into the callback.
+
 	* src/base/misc.h, list2.h: Introduce GWEN_LIST_FUNCTION_LIB_DEFS
 	macros that accept a third argument to specify the
 	__declspec(dllimport) function declarations where necessary. These
